--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port = 8090
-spring.profiles.active=test
+spring.profiles.active=dev
 spring.jpa.open-in-view=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
